--- a/package.json
+++ b/package.json
@@ -9,24 +9,23 @@
     "lint": "next lint",
     "check": "ncu && depcheck",
     "postbuild": "next-sitemap",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "prettier": "prettier '**/*.{js,jsx,ts,tsx}' --write"
   },
   "dependencies": {
+    "next": "13.4.9",
+    "next-intl": "^3.0.0-beta.7",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
     "@types/node": "20.4.0",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
-    "next": "13.4.9",
-    "next-intl": "^3.0.0-beta.7",
     "postcss": "8.4.25",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.6"
-  },
-  "devDependencies": {
     "dotenv": "^16.3.1",
     "flat": "^5.0.2",
     "fs-extra": "^11.1.1",
@@ -34,6 +33,8 @@
     "next-sitemap": "^4.1.8",
     "prettier": "^2.8.8",
     "pretty-quick": "^3.1.3",
-    "spreadsheet-to-json": "^2.0.0"
+    "spreadsheet-to-json": "^2.0.0",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.1.6"
   }
 }
