--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint": "next lint",
     "check": "ncu && depcheck",
     "postbuild": "next-sitemap",
-    "prepare": "husky install",
-    "prettier": "prettier '**/*.{js,jsx,ts,tsx}' --write"
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "13.4.9",
@@ -22,19 +21,29 @@
     "@types/node": "20.4.0",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
     "autoprefixer": "10.4.14",
+    "dotenv": "^16.3.1",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
-    "postcss": "8.4.25",
-    "dotenv": "^16.3.1",
     "flat": "^5.0.2",
     "fs-extra": "^11.1.1",
     "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
     "next-sitemap": "^4.1.8",
+    "postcss": "8.4.25",
     "prettier": "^2.8.8",
     "pretty-quick": "^3.1.3",
     "spreadsheet-to-json": "^2.0.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --quiet --fix"
+    ],
+    "*.{json,js,ts,jsx,tsx,html}": [
+      "prettier --write --ignore-unknown"
+    ]
   }
 }
