--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "next-sitemap": "^4.1.8",
     "postcss": "8.4.25",
     "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.4.1",
     "pretty-quick": "^3.1.3",
     "spreadsheet-to-json": "^2.0.0",
     "tailwindcss": "3.3.2",
