--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "prepare": "husky install",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:ci": "jest --ci"
+    "test:ci": "jest --ci",
+    "cypress": "cypress open",
+    "e2e": "start-server-and-test dev http://localhost:3000 \"cypress open --e2e\"",
+    "e2e:headless": "start-server-and-test dev http://localhost:3000 \"cypress run --e2e\"",
+    "component": "cypress open --component",
+    "component:headless": "cypress run --component"
   },
   "dependencies": {
     "next": "13.4.9",
@@ -21,6 +26,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^9.0.0",
     "@testing-library/dom": "^9.3.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
@@ -30,6 +36,7 @@
     "@types/react-dom": "18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "autoprefixer": "10.4.14",
+    "cypress": "^12.17.2",
     "dotenv": "^16.3.1",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
@@ -49,6 +56,7 @@
     "prettier-plugin-tailwindcss": "^0.4.1",
     "pretty-quick": "^3.1.3",
     "spreadsheet-to-json": "^2.0.0",
+    "start-server-and-test": "^2.0.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
