[add]vscode的settings.json更新

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
         "activityBar.background": "#123415",
         "titleBar.activeBackground": "#19491E",
         "titleBar.activeForeground": "#F5FCF6"
-    }
+    },
+    "i18n-ally.localesPaths": [
+        "locales"
+    ]
 }
